--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey Form</title>
     <link rel="stylesheet" href="style_4.css">
-    <link rel="icon" href="./images/Favicon.jpeg" type="image/jpeg">
+    <link rel="icon" href="Favicon.jpeg" type="image/jpeg">
 </head>
 <body>
     <form action="https://enw7u145b8im9.x.pipedream.net/" method="post">
